<resources>
    <string name="app_name">Android App</string>
    <string name="welcome">Welcome to my First Android App</string>
    <string name="name">Mark Gerard G. Gamboa</string>
    <string name="proceed">Proceed</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="review_information">Review Information</string>
</resources>